2000-05-03  Akim Demaille  <akim@epita.fr>

	Simplify the handling of `acconfig.h'.

	* autoheader.sh: No longer try to select the needed paragraphs of
	`acconfig.h', just dump everything into `config.h.in'.
	Implement support for `--warnings'.
	Warn the users that these auxiliary files are obsolete when `-W
	obsolete'.
	* doc/autoconf.texi (Invoking autoheader): Adjust.

2000-05-03  Akim Demaille  <akim@epita.fr>

	Support of acconfig.h was broken.  Fix and test.
	Reported by Jim Meyering.

	* autoheader.sh: Trace AC_DEFINE and AC_DEFINE_UNQUOTED to build
	the list of $syms which are defined.
	* tests/tools.m4 (autoheader): New test.

2000-05-03  Akim Demaille  <akim@epita.fr>

	Rename the language FORTRAN77 as Fortran 77.

	* aclang.m4 (AC_LANG(FORTRAN77), AC_LANG_SOURCE(FORTRAN77),
	AC_LANG_PROGRAM(FORTRAN77), AC_LANG_CALL(FORTRAN77)): Rename as...
	(AC_LANG(Fortran 77), AC_LANG_SOURCE(Fortran 77),
	AC_LANG_PROGRAM(Fortran 77), AC_LANG_CALL(Fortran 77)): This.
	(AC_LANG_FORTRAN77): Adjust.

2000-05-03  Akim Demaille  <akim@epita.fr>

	Provide a macro to canonicalize a configuration name.
	Suggested by Ralf Corsepius.

	*  acgeneral.m4 (AC_CANONICALIZE): New macro.
	(_AC_CANONICAL_THING): Use it.

2000-04-28  Akim Demaille  <akim@epita.fr>

	Don't double quote in AC_MSG_*.

	* acgeneral.m4 (_AC_SH_QUOTE): Don't double quote.  Escape the
	double quotes too.
	(_AC_ECHO_UNQUOTED): Don't double quote :).
	(_AC_ECHO, _AC_ECHO_N): Quote the call to _AC_SH_QUOTE.

	The autoheader chain needs to be adjusted.

	* acgeneral.m4 (AH_VERBATIM): Just pass two arguments to AH_OUTPUT
	instead of trying to build what `autoheader' needs: let it handle
	the format by itself.
	* autoheader.m4: Adjust.
	s,tmp/config.h,tmp/config.hin.

	The adjustment revealed that `autoconf --trace' is not robust to
	single quotes in its argument.

	* autoconf.sh: Fix this issue.
	Rename the escape `$*' as `$%'.  Implement `$@'.
	* doc/autoconf.texi: Adjust.
